	PR 2342 	* elflink.c (_bfd_elf_default_action_discarded): Revert 2006-02-16.